style.css
/* Generic Styles */
body {
  margin: 0;
  background-color: #f1f1f1;
  text-align: center;
  color:#888888;
  font-family: Helvetica;
}

.basicBox {
  width: 100px;
  padding: 5px;
  margin: 2px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.basicBoxShort {
  width: 70px;
  padding: 5px;
  margin: 2px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.basicBoxLong {
  width: 500px;
  padding: 5px;
  margin: 2px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

#ruleHeaders, #protocolSpecificOptions, #genericOptions, #contentSection, #regexSection, #postDetectionSection, #outputBox {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 90%;
  justify-self: center;
  border: 2px solid #acacac;
  margin-bottom: 10px;
  border-radius: 6px;
  padding: 8px 10px;
  gap: 5px;
}

#ipOptions, #tcpOptions, #udpOptions, #icmpOptions {
  display: none;
  justify-content: center;
  align-items: flex-start;
  flex-wrap: wrap;
  width: 100%;
  margin-top: 10px;
  gap: 5px;
}


.boxTitle {
  width: 100%;
  margin: 0 0 8px 0;
  color: #333333;
  text-align: left;
}

.checkboxItem {
  display: inline-flex;
  align-items: center;
  padding-right: 16px;
}

input[type="checkbox"] {
  width: 18px;
  height: 18px;
  accent-color: #0b76ef;
}


.basicBox, .basicBoxShort, .basicBoxLong {
  padding: 4px 6px;
  margin: 3px;
}

#dsizeDiv, #ttlDiv, #ip_protoDiv, #http_methodDiv, #http_stat_codeDiv, #flagsDiv, #flowDiv, #flowDivUDP, #itypeDiv, #icodeDiv, #referenceDiv, #serviceDiv, #contentDiv, #pcreDiv, #detection_filter {
  display: flex;
  align-items: center;
  gap: 6px;
  margin-right: 18px;
}

#ruleHeaders > *, #protocolSpecificOptions > *, #genericOptions > *, #contentSection > *, #regexSection > *, #postDetectionSection > * {
  display: inline-flex;
  align-items: center;
}

#flowState, #flowDirection, #flowDirectionUDP {
  width: 150px;
}

/* Specific Styles */
#direction {
  width: 50px;
}

#outputText {
  width: 100%;
  height: 50px;
  padding: 0px;
  border: none;
  background-color: transparent;
}

#http_method {
  width: 150px;
}

#http_stat_code {
  width: 280px;
}

#copiedMsg {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -150%);
  background: rgba(0, 0, 0, 0.85);
  color: #fff;
  padding: 1rem 1rem;
  border-radius: 10px;
  font-size: 1rem;
  z-index: 999;
  pointer-events: none;
  white-space: nowrap;
  box-shadow: 0 5x 20px rgba(0, 0, 0, 0.25);
}

.desktop-break {
  display: none;
}

@media screen and (min-width: 1660px) {
  .desktop-break {
    display: block;
    flex-basis: 100%;
    height: 0;
  }
}

